k8s/deployment.yaml
---
# ------------------- PostgreSQL + pgvector Deployment -------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: rag-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: pgvector/pgvector:pg16 # Use the official pgvector image with PostgreSQL 16
          ports:
            - containerPort: 5432
              name: pgvector-port
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/schema.sql
              subPath: schema.sql
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "sagar", "-d", "myvectordb"]
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "sagar", "-d", "myvectordb"]
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: init-script
          configMap:
            name: pg-init-schema
            
---
# ------------ RAG App (Streamlit + LLM) Deployment -----
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-app-deployment
  namespace: rag-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-app
  template:
    metadata:
      labels:
        app: rag-app
    spec:
      containers:
        - name: rag-app
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/rag-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
---

apiVersion: v1
kind: Service
metadata:
  name: rag-app-service
  namespace: rag-app
spec:
  type: ClusterIP
  selector:
    app: rag-app
  ports:
    - protocol: TCP
      port: 8501
      targetPort: rag-app-port
      name: rag-app-port
